# HybrA-Filterbanks

./: .gitignore  README.md  Test_Encoding_Decoding_w_HybrA.py  basics.ipynb  elescale.ipynb  filterbank_designer_test.ipynb  high_pass.ipynb  index.html  machmatight.py  main.py  main_neurodual.py  model.py  pyproject.toml  reconstruction_test.ipynb  scale_test.py  test.ipynb  test.py  test_gradient_masking.py  tests.ipynb  tightness_experiment.py
.github/workflows/: Build Wheel on main.yaml  Build Wheel.yaml  build-on-main.yaml  documentation.yaml  lint.yml  publish-to-pypi.yml  test.yml
datasets/: __init__.py  sweeps.py
docs/: api.rst  conf.py  index.rst
docs/_templates/: versioning.html
filters/: auditory_fb_fir.npy  audlet.pth  audlet_0025.pth
html/main/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
html/main/.doctrees/: api.doctree  environment.pickle  index.doctree
html/main/_sources/: api.rst.txt  index.rst.txt
hyba/: hybridfilterbank.py  utils.py
hybra/: __init__.py  _fit_dual.py  _fit_naurodual.py  _fit_neurodual.py  fir_audlet_filterbank.py  fir_filterbank.py  fir_mel_filterbank.py  hybridfilterbank.py  isac.py  isac_mel.py  isac_mfcc.py  loss.py  model.py  modulated_fir_audlet_filterbank.py  utils.py
loss/: losses.py
main/: .buildinfo  index.html  search.html  searchindex.js
main/.doctrees/: api.doctree  environment.pickle  index.doctree
tests/: README.md  conftest.py  test.py  test_isac.py  test_package.py
