[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyba"
version = "2024.0.0"
dependencies = [
  "pytorch",
]
authors = [
  {name = "The hyba project maintainers"},
]
description = "A module for trainable encoder/decoder filterbanks with auditory bias."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Filberbank", "Learned Filterbanks", "Feauture Extraction", "Hybrid Filterbanks", "Encoder", "Decoder", "Auditory", "Frames"]
classifiers = [
  "Programming Language :: Python"
]
[project.urls]
Repository = "https://github.com/danedane-haider/Hybrid-Auditory-Filterbanks.git"

[tool.hatch.build.targets.wheel]
packages = ["hyba"]

[tool.fixit]
formatter = "ufmt"